--- a/recipes/Spinach_Salad.html
+++ b/recipes/Spinach_Salad.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spinach Salad<h</title>
+    <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
-    <h1>Spinach Salad</h1>
-    <img src="https://www.allrecipes.com/thmb/2nSZ8TiNkl5gcGuN5XJe1bJOsi8=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/pomegranate-spinach-salad-2000-f349c237fab7411398cd5b1abe9868cc.jpg" alt="Image of Spinach salad" width="200px">
+    <h1>~ Spinach Salad ~</h1>
+    <img src="https://www.allrecipes.com/thmb/2nSZ8TiNkl5gcGuN5XJe1bJOsi8=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/pomegranate-spinach-salad-2000-f349c237fab7411398cd5b1abe9868cc.jpg" alt="Image of Spinach salad">
 
-    <h3>A so-simple homemade vinaigrette with crunchy almonds and pomegranate arils will have even the veggie-haters reaching for seconds.</h3>
+    <h3 class="salad_description">A so-simple homemade vinaigrette with crunchy almonds and pomegranate arils will have even the veggie-haters reaching for seconds.</h3>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, possimus! Consequatur vitae omnis perferendis quo natus reprehenderit, dolorem, veritatis possimus neque, facere mollitia beatae.</p>
 
     <h3>Ingredients:</h3>
-    <ul>
+    <ul class="ingredients">
         <li>1 tablespoon butter</li>
         <li>⅓ cup sliced almonds</li>
         <li>¼ cup vegetable oil</li>
@@ -25,12 +26,14 @@
         <li>1 tablespoon sesame seeds, toasted</li>
     </ul>
 
-    <h3>Steps:</h3>
+    <h3 class="steps">Steps:</h3>
     <ol>
         <li>Melt butter in a small saucepan over medium heat. Add almonds; cook, stirring frequently, until lightly toasted.</li>
         <li>Whisk oil, sugar, vinegars, sesame seeds, poppy seeds, onion, and paprika together in a bowl for the dressing</li>
         <li>Toss spinach, toasted almonds, and pomegranate arils together in a large bowl. Drizzle with dressing and toss to coat.</li>
     </ol>
+    <br>
+    <br>
     <a href="/index.html">Return to Home Page</a>
     <br>
     <br>
