--- a/recipes/Squash_Salad.html
+++ b/recipes/Squash_Salad.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
-    <h1>Squash Salad</h1>
-    <img src="https://www.allrecipes.com/thmb/sHlig2Hdv2jKc1DH1POMYustsCQ=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Roasted-Acorn-Squash-Salad-7c7fb50e54eb437584078da2e1553e9a.jpg" alt="Image of a squash salad" width="200px">
+    <h1>~ Squash Salad ~</h1>
+    <img src="https://www.allrecipes.com/thmb/sHlig2Hdv2jKc1DH1POMYustsCQ=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Roasted-Acorn-Squash-Salad-7c7fb50e54eb437584078da2e1553e9a.jpg" alt="Image of a squash salad">
 
-    <h3>This is a great, hearty and flavorful salad!</h3>
+    <h3 class="salad_description">This is a great, hearty and flavorful salad!</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis vel accusantium sit dignissimos sed ipsum sapiente, iure repudiandae excepturi, aperiam voluptatem, eos dolores doloremque! Commodi similique veritatis maxime eius qui!</p>
 
     <h3>Ingredients:</h3>
-    <ul>
+    <ul class="ingredients">
         <li>1 acorn squash - peeled, seeded, and cut into 1-inch cubes</li>
         <li>2 tablespoons olive oil</li>
         <li>½ teaspoon ground cinnamon</li>
@@ -27,7 +28,7 @@
         <li>1 tablespoon Dijon mustard</li>
     </ul>
 
-    <h3>Steps:</h3>
+    <h3 class="steps">Steps:</h3>
     <ol>
         <li>Position a rack into the center position of the oven and preheat oven to 400 degrees F (200 degrees C). Line a baking sheet or jelly roll pan with parchment paper.</li>
         <li>Spread acorn squash cubes onto prepared baking sheet and toss with 2 tablespoons olive oil. Mix cinnamon, onion powder, cumin, 1/2 teaspoon salt, and 1/4 teaspoon black pepper in a small bowl; sprinkle spice mixture over squash cubes.</li>
@@ -38,6 +39,8 @@
         </li>
         <li>Toss cooked acorn squash cubes, baby arugula, cranberries, pistachios, and goat cheese in a salad bowl; drizzle with dressing and serve.</li>
     </ol>
+    <br>
+    <br>
     <a href="/index.html">Return to Home Page</a>
     <br>
     <br>
