--- a/recipes/persimmon_salad.html
+++ b/recipes/persimmon_salad.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persimmon Salad</title>
+    <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
-    <h1>Persimmon Salad</h1>
-    <img src="https://www.allrecipes.com/thmb/zLA8M0XxL5itSvOSTCNFEYdlpTA=/600x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7247725_spinach-and-persimmon-salad-with-goat-cheese-and-pomegranate_photo-by-kims-cooking-now-1daf82077dd1438d9f99c644cc5e838f.jpg" alt="An image of Persimmon Salad" width="200px">
+    <h1>~ Persimmon Salad ~</h1>
+    <img src="https://www.allrecipes.com/thmb/zLA8M0XxL5itSvOSTCNFEYdlpTA=/600x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7247725_spinach-and-persimmon-salad-with-goat-cheese-and-pomegranate_photo-by-kims-cooking-now-1daf82077dd1438d9f99c644cc5e838f.jpg" alt="An image of Persimmon Salad">
 
-    <h3>Creamy goat cheese accompanies tart and slightly sweet persimmons and pops of pomegranate flavor. Twist our arm!</h3>
+    <h3 class="salad_description">Creamy goat cheese accompanies tart and slightly sweet persimmons and pops of pomegranate flavor. Twist our arm!</h3>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente recusandae nisi natus? Eos repudiandae ratione corporis quo, iste illum, quod velit cum sunt, magni suscipit voluptatum cumque animi quae aut?</p>
 
     <h3>Ingredients:</h3>
-    <ul>
+    <ul class="ingredients">
         <li>1 Fuyu persimmon, peeled and cored</li>
         <li>2 cups roughly chopped spinach</li>
         <li>3 tablespoons pomegranate seeds</li>
@@ -23,7 +24,7 @@
         <li>1 tablespoon sliced almonds</li>
     </ul>
 
-    <h3>Steps:</h3>
+    <h3 class="steps">Steps:</h3>
     <ol>
         <li>Slice persimmon into 1/4-inch rounds, then slice each round into quarters.</li>
         <li>Place chopped spinach into a salad bowl. Top with persimmon quarters, pomegranate seeds, goat cheese, and sliced almonds.
@@ -31,6 +32,8 @@
         </li>
         <li>Whisk together olive oil, orange juice, lemon juice, Dijon mustard, salt, and pepper in a small bowl. Drizzle vinaigrette over salad and toss lightly to coat. Serve immediately.</li>
     </ol>
+    <br>
+    <br>
     <a href="/index.html">Return to Home Page</a>
 <br>
 <br>
